[gd_scene load_steps=27 format=3 uid="uid://bsu4nb8mnsplq"]

[ext_resource type="Script" uid="uid://dr3rc4w1rfegg" path="res://Map/Scripts/pause_screen.gd" id="1_35ilm"]
[ext_resource type="Texture2D" uid="uid://crvinm7evff1c" path="res://Map/Assets/UI/1.png" id="1_nouut"]
[ext_resource type="Shader" uid="uid://8v6xb4whdidg" path="res://Map/Scripts/pause_screen.gdshader" id="2_6prmw"]
[ext_resource type="Texture2D" uid="uid://bppx5evd7sf3o" path="res://Map/Assets/UI/Sprite-0001.png" id="4_35ilm"]
[ext_resource type="Texture2D" uid="uid://bhf7si1nx3puk" path="res://Map/Assets/UI/ButtonsFirstRow.png" id="6_hjtqr"]
[ext_resource type="Texture2D" uid="uid://dtvwo2dvc1wo3" path="res://Map/Assets/UI/image.png" id="6_hom0k"]
[ext_resource type="Texture2D" uid="uid://cfrcyjfsyfovr" path="res://Map/Assets/UI/ButtonsFirstRowClicked.png" id="7_58c6n"]

[sub_resource type="Animation" id="Animation_hjtqr"]
resource_name = "FirstRowButtons"
length = 0.50001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Paper/Resume:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Paper/Options:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Paper/Exit:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_35ilm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Paper:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -184)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Paper/PausedText:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Paper/Resume:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Paper/Options:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/Paper/Exit:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HBoxContainer/VBoxContainer/Scroll:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Blur:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_nouut"]
resource_name = "RollIn"
length = 0.80001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/VBoxContainer/Scroll:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer/VBoxContainer/Scroll:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Blur:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Paper:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -184), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/Paper/PausedText:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.6, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wd3o5"]
_data = {
&"FirstRowButtons": SubResource("Animation_hjtqr"),
&"RESET": SubResource("Animation_35ilm"),
&"RollIn": SubResource("Animation_nouut")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wd3o5"]
shader = ExtResource("2_6prmw")
shader_parameter/blur_amount = 1.50000007125

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ecb1v"]
texture = ExtResource("6_hjtqr")
region_rect = Rect2(51, 66, 66, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xvcw5"]
texture = ExtResource("7_58c6n")
region_rect = Rect2(51, 66, 66, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_giie5"]
texture = ExtResource("7_58c6n")
region_rect = Rect2(51, 66, 66, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qcew3"]
texture = ExtResource("7_58c6n")
region_rect = Rect2(51, 66, 66, 14)

[sub_resource type="InputEventKey" id="InputEventKey_hjtqr"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_58c6n"]
events = [SubResource("InputEventKey_hjtqr")]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q374k"]
texture = ExtResource("6_hjtqr")
region_rect = Rect2(51, 98, 65, 18)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qomeb"]
texture = ExtResource("7_58c6n")
region_rect = Rect2(51, 98, 65, 18)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nd644"]
texture = ExtResource("7_58c6n")
region_rect = Rect2(51, 98, 65, 18)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dmhes"]
texture = ExtResource("7_58c6n")
region_rect = Rect2(51, 98, 65, 18)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a2etb"]
texture = ExtResource("6_hjtqr")
region_rect = Rect2(65, 131, 33, 13)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j1pch"]
texture = ExtResource("7_58c6n")
region_rect = Rect2(65, 131, 33, 13)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3sxxt"]
texture = ExtResource("7_58c6n")
region_rect = Rect2(65, 131, 33, 13)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f2u6r"]
texture = ExtResource("7_58c6n")
region_rect = Rect2(65, 131, 33, 13)

[node name="PauseScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_35ilm")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Scroll" type="Sprite2D" parent="HBoxContainer/VBoxContainer"]
self_modulate = Color(0, 0, 0, 0)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("1_nouut")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wd3o5")
}

[node name="Blur" type="ColorRect" parent="."]
z_index = -2
material = SubResource("ShaderMaterial_wd3o5")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Control" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -82.0
offset_top = 81.0
offset_right = 81.99982
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Paper" type="TextureRect" parent="Control"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -184.0
offset_right = 0.00018310547
offset_bottom = -184.0
grow_horizontal = 2
grow_vertical = 2
focus_behavior_recursive = 1
texture = ExtResource("4_35ilm")

[node name="PausedText" type="TextureRect" parent="Control/Paper"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -53.0
offset_top = 14.0
offset_right = 60.00032
offset_bottom = 47.0
grow_horizontal = 2
texture = ExtResource("6_hom0k")

[node name="Resume" type="Button" parent="Control/Paper"]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -29.5
offset_right = 32.0
offset_bottom = -13.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_ecb1v")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xvcw5")
theme_override_styles/hover = SubResource("StyleBoxTexture_giie5")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_qcew3")
shortcut = SubResource("Shortcut_58c6n")
shortcut_in_tooltip = false

[node name="Options" type="Button" parent="Control/Paper"]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = 5.5
offset_right = 31.99997
offset_bottom = 21.499954
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_q374k")
theme_override_styles/pressed = SubResource("StyleBoxTexture_qomeb")
theme_override_styles/hover = SubResource("StyleBoxTexture_nd644")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_dmhes")

[node name="Exit" type="Button" parent="Control/Paper"]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = 35.5
offset_right = 41.99997
offset_bottom = 51.499817
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_a2etb")
theme_override_styles/pressed = SubResource("StyleBoxTexture_j1pch")
theme_override_styles/hover = SubResource("StyleBoxTexture_3sxxt")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_f2u6r")

[connection signal="pressed" from="Control/Paper/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Control/Paper/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Control/Paper/Exit" to="." method="_on_exit_pressed"]
